--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,11 @@
-20201211-beta2
+20201212-beta3
 - Fix Issue #878: update search by tag parser to handle missing 'isAdContainer'.
 - Fix Issue #877: update fanbox parser for missing embedId.
 - Fix Issue #881: change content_provider.json path resolution.
 - Partial Implement #873: store member token in db.
 - Fix Issue #880: update batch handler based on changes from byjtje.
 - Change from re.match() to re.search() for extension filter for batch job.
+- Fix Issue #882: trying to load from None object.
 
 20201130
 - Merge Added series JSON and an option to download it, expended %manga_series% to work with all modes, added an option for untouched JSON (#855) by byjtje. 
