--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20211030
+- Fix Issue #1035: enhance error detection when converting ugoira.
+- Fix Issue #1031 and #1034: fix command line option for 3 and 8
+
 20211020
 - Fix Issue #1028: Update download new illust parser to use new API.
 - Implement #1027: Add Bookmark Count Option to Option 5, 8.
