--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+20220804
+- Merge fix reencoding backup of files to follow ugoira config (#1131) by Toyem.
+- Implement #1133: enhance content_provider.json to support urlEmbed.
+- Merge Add a separator in temp folder cmd for windows (fix #1132) (#1135) by Toyem.
+- Merge fix ugoira generation and reencoding for all distribution for issue #1132 (#1136) by Toyem.
+- Merge Fix for #1138 (#1139) by NHOrus.
+- Merge Fixes Byte Order Mark in Downloaded file list, again. (#1137) by NHOrus.
+- and other minor changes.
+
 20220701
 - Merge Update WriteXMP feature to use pyexiv2 only (#1043) by @Baa.
 - Merge Adds feature to strip HTML from captions (#1045) by @Baa.
